Fix: mini-editor didn't show cursor when empty on mobile

--- a/src/Workspace.scss
+++ b/src/Workspace.scss
@@ -747,7 +747,6 @@ body {
 input:focus,
 [contenteditable]:focus {
   outline: none;
-  background-color: var(--base02);
 }
 
 .input-group:focus-within {
@@ -1098,7 +1097,8 @@ input:focus,
 
 .mini-editor {
   outline: none;
-  min-width: 1px;
+  display: inline-block;
+  min-width: 10px;
 }
 
 // ============================================
